# Fibers

./: .gitignore  404.html  CNAME  README.md  development.html  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
assets/: 404.html-aacbb226.js  app-422b3f5b.js  development.html-acf01078.js  development.html-eeefab45.js  index.html-0f37bb6b.js  index.html-e8db50b5.js
docs/: CNAME  development.md  package.json  pnpm-lock.yaml
docs/.vuepress/: config.ts
fibers/: .tree.yml  __init__.py  debug.py
fibers/agent/: __init__.py  code_retriever.py  qa_agent_1.py
fibers/data_loader/: arxiv_html_to_tree.py  bad_text_attr.py  bad_text_node_class.py  document.py  html_converter.py  html_to_doc.py  html_to_tree.py  latex_to_doc.py  latex_to_tree.py  markdown_to_doc.py  markdown_to_tree.py  module_to_tree.py
fibers/debug/: __init__.py
fibers/file_helper/: __init__.py
fibers/forest_connector/: __init__.py  forest_connector.py
fibers/gui/: dictionary_viewer.py  renderer.py  similarity_search.py  tree.py
fibers/helper/: __init__.py  cache_manage.py  image.py  json_encoder.py  utils.py
fibers/indexing/: .tree.yml  __init__.py  code_indexer.py  core.py  indexing.py  key_phrase.py  parent_mixed.py  vector_store.py
fibers/model/: anthropic_model.py  chat.py  embedding.py  google_model.py  openai.py  openai_model.py  openllm.py
fibers/tree/: __init__.py  analysis.py  mapping.py  node.py  node_attr.py  prompt_utils.py  tree.py
fibers/utils/: code_process.py  mapping.py  prompt_utils.py  text_process.py
playgroud/: operate_module_tree.py  sparse.py  visualize_project.py
playground/: beam_search.py  chat_providers.py  debugger.py  embedding_search.py  google_chat.py  interactive_tree.py  operate_module_tree.py  visualize_paper.py  visualize_project.py
playground/agent/: auto_data_analyst.py
playground/instruction_run/: auto_data_analyst.py  data_analyst_lab.py
script/: set_open_api_key.sh  setup_env.sh  update_projects.sh
test/cache/: test_cache.py
test/indexing/: test_base_class.py  test_key_phrase.py  test_multi_heads.py
test/model/: test_image_chat.py
test/tree/: test_tree_basic.py
test_sparse/: beaker.py  shape.py
(+73 files in other folders)
