[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Fibers"
description = "Tree-based knowledge management system"
version = "0.1.0"
authors = [
    { name = "Zijian Zhang" }
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["fibers"]